--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,7 @@
 name = "neurovolt"
-main = "src/index.js"
-compatibility_date = "2024-01-01"
-nodejs_compat = true
-
-[build]
-command = "npm run build"
+compatibility_date = "2025-07-02"
+compatibility_flags = ["nodejs_compat"]
+pages_build_output_dir = ".vercel/output/static"
 
 [env.production]
 name = "neurovolt-production"
